# dippy-studio-bittensor-miner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  capacity_check.py  config_generator.py  docker-compose.yml  inference_server.py  info.py  lora_generate_image.py  miner_server.py  requirements.txt  requirements_test_async.txt  run.py  training_server.py  trt-builder.Dockerfile  trt.py
charts/dippy-trt-builder/: Chart.yaml  values.yaml
charts/dippy-trt-builder/templates/: _helpers.tpl  job.yaml  pvc.yaml
dippy-helm/: Chart.yaml  values.yaml
dippy-helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
dippy-helm/templates/tests/: test-connection.yaml
docs/: async_inference_e2e.md
extensions_built_in/sd_trainer/: SDTrainer.py  __init__.py
jobs/: BaseJob.py  __init__.py
jobs/process/: BaseSDTrainProcess.py  BaseTrainProcess.py  __init__.py
reverse_proxy/: .env.example  CLI_README.md  Dockerfile  README.md  __init__.py  __main__.py  cli.py  config.example.json  config.py  env.example  pyproject.toml  register.py  requirements.txt  server.py
reverse_proxy/epistula/: __init__.py  lib.py
scripts/: trt_build_in_container.sh
tests/e2e/async_inference/: __init__.py  callback_server.py  cli.py  client.py  conftest.py  test_async_inference.py
toolkit/: config_modules.py  custom_adapter.py  data_loader.py  job.py  progress_bar.py  stable_diffusion_model.py
